--- a/versions.gradle
+++ b/versions.gradle
@@ -1,23 +1,23 @@
 ext {
-    BUILD_TOOLS_VERSION = '28.0.3'
-    COMPILE_SDK_VERSION = 28
-    TARGET_SDK_VERSION = 28
-    MINIMUM_SDK_VERSION = 18
+  BUILD_TOOLS_VERSION = '28.0.3'
+  COMPILE_SDK_VERSION = 28
+  TARGET_SDK_VERSION = 28
+  MINIMUM_SDK_VERSION = 18
 
-    APP_VERSION = 1
-    APP_VERSION_NAME = '1.0.0'
+  APP_VERSION = 1
+  APP_VERSION_NAME = '1.0.0'
 
-    KOTLIN_VERSION = '1.3.41'
-    SUPPORT_LIBRARY_VERSION = '1.0.2'
-    CORE_KTX_VERSION = '1.0.2'
-    CONSTRAINT_LAYOUT_VERSION = '1.1.3'
-    RECYCLER_VIEW_VERSION = '1.1.0-beta01'
-    DAGGER_VERSION = '2.23'
-    RX_JAVA_VERSION = '2.1.16'
-    RX_ANDROID_VERSION = '2.0.2'
-    AUTODISPOSE_VERSION = '1.0.0-RC1'
+  KOTLIN_VERSION = '1.3.41'
+  SUPPORT_LIBRARY_VERSION = '1.0.2'
+  CORE_KTX_VERSION = '1.0.2'
+  CONSTRAINT_LAYOUT_VERSION = '2.0.0-alpha2'
+  RECYCLER_VIEW_VERSION = '1.1.0-beta01'
+  DAGGER_VERSION = '2.23'
+  RX_JAVA_VERSION = '2.1.16'
+  RX_ANDROID_VERSION = '2.0.2'
+  AUTODISPOSE_VERSION = '1.0.0-RC1'
 
-    JUNIT_VERSION = '4.12'
-    ASSERTJ_VERSION = '3.8.0'
-    MOCKITO_VERSION = '2.0.0-RC1'
+  JUNIT_VERSION = '4.12'
+  ASSERTJ_VERSION = '3.8.0'
+  MOCKITO_VERSION = '2.0.0-RC1'
 }
