--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,15 @@
   package="com.example.decathlonhiring">
 
   <application
+    android:name=".DecathlonHiringApplication"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/AppTheme"
-    android:name=".DecathlonHiringApplication">
-    <activity android:name=".ui.main.MainActivity">
+    android:theme="@style/AppTheme">
+    <activity android:name=".ui.main.MainActivity"
+      android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
